	  setting (Ettore Simone)
	* ICQ encoding fix for offline buddies (Ilya Konstantinov)

	IRC Features:
	* SSL support for IRC connections (Daniel Atallah)
	* Show an error message when temporarily unable to join an IRC
	  channel or change your nick
	* Added /nickserv, /memoserv, /chanserv and /operserv
	  commands (Joao Luís Marques Pinto)
	* Added CTCP VERSION via /version (Andrej Krivulčík)

	Jabber Features:
	* Support for SRV lookups
	* Support for buddy icons
	* Jabber User Directory searching

	SILC Features:
	* Whiteboard support (Pekka Riikonen)
	* Sending/receiving images in IMs (Pekka Riikonen)
	* Cipher and HMAC selection support (Pekka Riikonen)
	* Buddy Icon support (Pekka Riikonen)

	Other Protocol Changes:
	* Bonjour (Rendezvous) protocol support (Juanjo Molinero Horno, Google
	  Summer of Code)
	* Updated Gadu-Gadu protocol support (Bartosz Oler, Google Summer of
	  Code).  This requires the libgadu library.  See
	  http://pidgin.im/faq.php#libgadu for more information.
	* SIP/SIMPLE support (Thomas Butter, Google Summer of Code)
	* Sametime protocol support
	  Requires the meanwhile library: http://meanwhile.sourceforge.net
	* QQ protocol support (Mark Huetsch, Google Summer of Code, and the
	  developers of the OpenQ project)
	* Removed the Napster and TOC protocols plugins

	Other Noteworthy Changes:
	* UPnP and NAT traversal support (Adam J. Warrington, Google Summer of
	  Code)
	* The modify account dialog now contains two tabs, which should display
	  better at lower resolutions (Sadrul Habib Chowdhury)
	* New "find buddy" results dialog (Alex Converse)
	* People using input methods can now use Enter again
	* Mouse-over hyperlink coloring is now themeable
	* Buddy Pounces now have a proper management window. (Kevin Stange)
	* Buddy icons maintain aspect ratio when resized
	* The last used directory is remembered for opening or saving files and
	  buddy icons
	* Add an SVG version of our desktop icon, pidgin.svg (John Oyler)